css: margin, padding fix, js: hide menu on mobile view

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
 ul li {
   list-style-type: none;
 }
@@ -14,24 +22,36 @@ ul {
 .hamburger {
   display: none;
   float: right;
+  width: 35px;
+  height: 40px;
+  font-size: 30px;
+  margin-top: 0;
 }
 
 nav {
   margin-right: 20px;
 }
 
-.home-button{
-    background-color: #6c757d;
-    border-color: #6c757d;
-    color:white;
-    border-radius: .5rem;
+.home-button {
+  background-color: #6c757d;
+  border-color: #6c757d;
+  color: white;
+  border-radius: 10px;
+  width: 50px;
+  height: 25px;
+}
+.signup-button {
+  background-color: #aa66cc;
+  color: white;
+  border-radius: 0.5rem;
+}
 
+.navbar-container {
+  height: 60px;
+  padding-top: 20px;
+  padding-left: 20px;
 }
-.signup-button{
-    background-color: #AA66CC;
-    color:white;
-    border-radius: .5rem;
-}
+
 @media screen and (max-width: 600px) {
   ul {
     display: flex;
@@ -42,12 +62,22 @@ nav {
   nav {
     float: right;
     height: 100vh;
+    overflow: hidden;
   }
+
   .hamburger {
     display: block;
+    margin-top: 0;
   }
 
   .invisible {
     display: none;
+   
+  }
+
+  .navbar-container {
+    height: 60px;
+    padding-top: 0;
+    padding-left: 20px;
   }
 }
